# ForgeCouncil

./: .gitignore  AGENTS.md  AIAST_CHANGELOG.md  AIAST_VERSION.md  ARCHITECTURE.md  CHANGELOG.md  CONFLICT_MAP.md  DATA_MODEL.md  DECISIONS.md  EVAL_REPORT.md  EXTENSION_ROADMAP.md  GPT54.md  NFR.md  PLAN.md  PRD.md  PRODUCT_BRIEF.md  README.md  RELEASE_NOTES.md  REPO_PROFILE.md  RESUME_PACKET.md  ROADMAP.md  RUNBOOK.md  TEST_STRATEGY.md  TODO.md  WHERE_LEFT_OFF.md  pyproject.toml
.cursor/agents/: README.md
.cursor/rules/: 60-composer-orchestration.mdc  fc-00-global.mdc  fc-10-architecture.mdc  fc-20-quality.mdc  fc-30-security.mdc  fc-40-handoffs.mdc  fc-50-precedence.mdc
_system/: .template-install.json  CONTEXT_INDEX.md  CROSS_PLATFORM_DISTRIBUTION_AND_INSTALLER_STANDARD.md  EXECUTION_PROTOCOL.md  GIT_REMOTE_AND_SYNC_PROTOCOL.md  INTEGRITY_MANIFEST.sha256  KEY.md  LOAD_ORDER.md  MASTER_SYSTEM_PROMPT.md  MODERN_UI_PATTERNS.md  MULTI_AGENT_COORDINATION.md  PLUGIN_CONTRACT.md  PROJECT_PROFILE.md  PROMPTS_INDEX.md  REPO_OPERATING_PROFILE.md  SECURITY_HARDENING_CONTRACT.md  SUB_AGENT_HOST_DELEGATION.md  SYSTEM_REGISTRY.json  aiaast-capabilities.json  instruction-precedence.json  repo-operating-profile.json
_system/context/: CURRENT_STATUS.md
_system/forge-council/: README.md
_system/forge-council/context/: architecture_context.md  integration_context.md  product_context.md  (+3 more)
_system/history/: template-sync-events.jsonl
_system/mcp/: MCP_SERVER_CATALOG.md
_system/ports/: PORT_POLICY.md
_system/prompt-packs/: M6_INSTALL_AND_DISTRIBUTION.md
bootstrap/: check-network-bindings.sh  discover-plugins.sh  emit-auxiliary-brief.sh  emit-tiered-context.sh  fc-api-smoke.sh  fc-controlled-run.sh  fc-export-resume-packet.sh  fc-gate-check.sh  fc-host-install.sh  fc-repo-ingestion.sh  validate-mcp-health.sh  validate-plugin.sh  validate-system.sh
bootstrap/lib/: aiaast-lib.sh
docs/forge-council/: M5_M7_EXECUTION_AND_MEMORY.md  SCALE_M8_M12.md
mobile/flutter/: pubspec.yaml
ops/: LOCAL_DEV_PORTS.md
ops/compose/: compose.yml
ops/env/: .env.example
ops/install/: install.sh  launch-forge-council-api.sh
packaging/: README.md  appimage.yml  flatpak-manifest.json  io.aiaast.forge.council.desktop  snapcraft.yaml
registry/: backend-assignments.yaml  port_assignments.yaml  port_governance.yaml  ports.yaml
src/forge_council/: __init__.py  api_app.py  auth.py  dispatch_execution.py  dispatch_job_broadcaster.py  dispatch_worker.py  local_runner.py  memory_store.py  models.py  otel.py  schema_check.py  schema_util.py  server.py  sqlite_store.py  store_protocol.py
tests/: conftest.py  test_api.py  test_schema_check.py  test_sqlite_store.py
tools/: fc_export_resume.py  fc_repo_ingestion.py
(+67 files in other folders)
